Closed Bug 574156 Opened 14 years ago Closed 14 years ago

limit gfxXlibSurface Pixmap dimensions to the *signed* 16-bit range

Categories

(Core :: Graphics, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b1

People

(Reporter: karlt, Assigned: karlt)

References

Details

Attachments

(1 file)

The X server responds with BadAlloc errors when Pixmap dimensions are not representable with signed 16-bit ints. http://cgit.freedesktop.org/xorg/xserver/tree/dix/dispatch.c?id=7287ef9e6cf953066e4a092cca9d0e4a279172bf#n1388
Attached patch 1-bit patchSplinter Review
Attachment #453508 - Flags: review?(jmuizelaar)
Comment on attachment 453508 [details] [diff] [review] 1-bit patch How about adding a comment about where the number 0x7fff comes from.
Attachment #453508 - Flags: review?(jmuizelaar) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a6
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: