b=574156 limit Pixmap dimensions to the *signed* 16-bit range r=jrmuizel